--- a/ServerTime/style.css
+++ b/ServerTime/style.css
@@ -10,7 +10,7 @@ body {
     display: flex;
     margin: 0;
     padding: 0;
-    background-color: #F9F9F9;
+    background-color: #EEEEEE;
     align-items: center;
     width: 100%;
     height: 100%;
@@ -42,8 +42,12 @@ body {
     box-shadow: 0 4px 10px rgba(0,0,0,0.05);
 }
 
-.tab {
+.tableft {
     width: 70%;
+}
+
+.tabright {
+    width: 30%;
 }
 
 ul,li {
@@ -53,8 +57,22 @@ ul,li {
 }
 
 .tablist li{
+	cursor: pointer;
 	display: inline-block;  
-	height:46px; 
+	background-color: #DFDFDF;
+	padding: 12px 16px;
+	text-align:center; 
+	border-right:1px solid #ddd;
+}
+
+.tablist li.active {
+  background-color: #fff;
+}
+
+.tablisto li{
+	display: inline-block;  
+	background-color: #fff;
+	padding: 12px 16px;
 	text-align:center; 
 	border-right:1px solid #ddd;
 }
@@ -66,10 +84,48 @@ ul,li {
     box-shadow: 0 4px 10px rgba(0,0,0,0.05);
 }
 
+#speedtest {
+    background-color: #fff;
+    padding: 20px;
+    height: 70vh;
+    /* border-radius: 12px; */
+    box-shadow: 0 4px 10px rgba(0,0,0,0.05);
+}
+
+#testbox {
+	display: flex;
+	background-color: #DDDDDD;
+    justify-content: center; /* 가로 정렬 */
+ 	align-items: center;      /* 세로 정렬 */
+	cursor: pointer;
+	height: 20%;
+	margin-bottom: 20px;
+}
+
+#listitle {
+	font-size: 24px;
+	margin-bottom: 20px;
+}
+
+#resultlist {
+	height: 46vh;
+    overflow: auto;
+}
+
+#resultlist li {
+	list-style: none; 
+	padding: 12px;
+    padding: 10px 16px;
+    background-color: #fff;
+    border: 2px solid #ccc;
+    /* border-radius: 8px; */
+    margin-bottom: 16px;	
+}
+
 /* 오른쪽 영역 - 검색 */
 #search {
     background-color: #ffffff;
-    width: 30%;
+    /* width: 30%; */
     padding: 20px;
     /* border-radius: 12px; */
     box-shadow: 0 4px 10px rgba(0,0,0,0.05);
@@ -79,6 +135,7 @@ ul,li {
 form {
     display: flex;
     align-items: center;
+    margin-top: 8px;
     margin-bottom: 16px;
     gap: 12px;
     flex-wrap: wrap;
@@ -131,7 +188,7 @@ button:hover, Button:hover {
     justify-content: center;
     align-items: center;
     text-align: center;
-    margin-top: 16px;
+    margin-top: 8px;
 	/* border-radius: 16px; */
     background-color: #000000;
     color: #FFFFFF;
@@ -154,7 +211,7 @@ button:hover, Button:hover {
 }
 
 .post-ip {
-	width: 110px; /* 고정 너비 */
+	width: 80px; /* 고정 너비 */
 	flex-shrink: 0;
 	font-weight: bold;
 	color: #555;
@@ -166,6 +223,7 @@ button:hover, Button:hover {
 .post-content {
   flex: 1;
   font-size: 14px;
+  padding: 0px 16px;
   min-width: 200px;
   word-break: break-word;
 }
@@ -192,7 +250,7 @@ button:hover, Button:hover {
 
 .boardlist {
 	width: 100%;
-	height: 59vh;
+	height: 60vh;
 	overflow: auto;	
 }
 
@@ -212,4 +270,45 @@ button:hover, Button:hover {
     background-color: #000;
     border: 2px solid #fff;
     color: #fff
+}
+
+#timelabel {
+	justify-content: space-between;
+	display: flex;
+  	align-items: center;
+  	font-size: 16px;
+}
+
+#alarm {
+	display: flex;
+  	align-items: center;
+  	gap: 10px; /* 요소 사이 간격 */
+  	font-size: 16px;
+}
+
+.toggle-switch {
+  width: 30px;
+  height: 16px;
+  background-color: #ccc;
+  position: relative;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.toggle-switch.on {
+  background-color: #4caf50;
+}
+
+.switch-handle {
+  width: 14px;
+  height: 14px;
+  background-color: white;
+  position: absolute;
+  top: 1px;
+  left: 1px;
+  transition: left 0.3s;
+}
+
+.toggle-switch.on .switch-handle {
+  left: 15px;
 }
