--- a/ServerTime/style.css
+++ b/ServerTime/style.css
@@ -16,13 +16,16 @@ body {
     padding: 0;
     background-color: #EEEEEE;
     align-items: center;
+    justify-content: center; /* 가로 정렬 */
     width: 100%;
+    min-height: 100vh;
     height: 100%;
     overflow-x: hidden;
     flex-direction: column;
 }
 
 #layout {
+	height: 100%;
 	padding: 20px;
 	gap: 20px;
 	width: 50vw;
@@ -81,6 +84,10 @@ ul,li {
 	border-right:1px solid #ddd;
 }
 
+#search, #speedtest, #board {
+	height: 40vh;
+}
+
 #board {
     background-color: #fff;
     padding: 20px;
@@ -91,7 +98,6 @@ ul,li {
 #speedtest {
     background-color: #fff;
     padding: 20px;
-    height: 68vh;
     /* border-radius: 12px; */
     box-shadow: 0 4px 10px rgba(0,0,0,0.05);
 }
@@ -102,7 +108,7 @@ ul,li {
     justify-content: center; /* 가로 정렬 */
  	align-items: center;      /* 세로 정렬 */
 	cursor: pointer;
-	height: 20%;
+	height: 13.3vh;
 	margin-bottom: 20px;
 }
 
@@ -112,7 +118,7 @@ ul,li {
 }
 
 #resultlist {
-	height: 46vh;
+	height: 48%;
     overflow: auto;
 }
 
@@ -133,6 +139,10 @@ ul,li {
     padding: 20px;
     /* border-radius: 12px; */
     box-shadow: 0 4px 10px rgba(0,0,0,0.05);
+}
+
+#board #speedtest #search {
+	height: 20vh;
 }
 
 /* 한 줄 폼 (검색창, 버튼 등) */
@@ -248,13 +258,13 @@ button:hover, Button:hover {
 
 .list {
 	width: 100%;
-	height: 60vh;
+	height: 85%;
 	overflow: auto;	
 }
 
 .boardlist {
 	width: 100%;
-	height: 60vh;
+	height: 85%;
 	overflow: auto;	
 }
 
